--- a/MVCBlog/MVCBlog.csproj
+++ b/MVCBlog/MVCBlog.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Post.cs" />
+    <Compile Include="Models\Tag.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utils\Utils.cs" />
